add navigation infrastructure

--- a/AlgimedDesktopTest.WpfImplementation/AlgimedDesktopTest.WpfImplementation.csproj
+++ b/AlgimedDesktopTest.WpfImplementation/AlgimedDesktopTest.WpfImplementation.csproj
@@ -2,12 +2,10 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
+    <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
