--- a/AlgimedDesktopTest.WpfImplementation/AlgimedDesktopTest.WpfImplementation.csproj
+++ b/AlgimedDesktopTest.WpfImplementation/AlgimedDesktopTest.WpfImplementation.csproj
@@ -6,6 +6,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.11" />
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AlgimedDesktopTest.Database\AlgimedDesktopTest.Database.csproj" />
   </ItemGroup>
 </Project>
