--- a/AlgimedDesktopTest.WpfImplementation/AlgimedDesktopTest.WpfImplementation.csproj
+++ b/AlgimedDesktopTest.WpfImplementation/AlgimedDesktopTest.WpfImplementation.csproj
@@ -6,6 +6,7 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.11" />
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
   </ItemGroup>
