store last user page as option

--- a/AlgimedDesktopTest.WpfImplementation/AlgimedDesktopTest.WpfImplementation.csproj
+++ b/AlgimedDesktopTest.WpfImplementation/AlgimedDesktopTest.WpfImplementation.csproj
@@ -12,5 +12,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AlgimedDesktopTest.Database\AlgimedDesktopTest.Database.csproj" />
+    <ProjectReference Include="..\AlgimedDesktopTest.Shared\AlgimedDesktopTest.Shared.csproj" />
   </ItemGroup>
 </Project>
