add project references

--- a/AlgimedDesktopTest.WindowsFormsImplementation/AlgimedDesktopTest.WindowsFormsImplementation.csproj
+++ b/AlgimedDesktopTest.WindowsFormsImplementation/AlgimedDesktopTest.WindowsFormsImplementation.csproj
@@ -8,4 +8,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AlgimedDesktopTest.Database\AlgimedDesktopTest.Database.csproj" />
+    <ProjectReference Include="..\AlgimedDesktopTest.Shared\AlgimedDesktopTest.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
