--- a/AlgimedDesktopTest.WindowsFormsImplementation/AlgimedDesktopTest.WindowsFormsImplementation.csproj
+++ b/AlgimedDesktopTest.WindowsFormsImplementation/AlgimedDesktopTest.WindowsFormsImplementation.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AlgimedDesktopTest.Database\AlgimedDesktopTest.Database.csproj" />
     <ProjectReference Include="..\AlgimedDesktopTest.Shared\AlgimedDesktopTest.Shared.csproj" />
   </ItemGroup>
