excel windows forms

--- a/AlgimedDesktopTest.Shared/AlgimedDesktopTest.Shared.csproj
+++ b/AlgimedDesktopTest.Shared/AlgimedDesktopTest.Shared.csproj
@@ -1,13 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="DeviceId.Windows.Wmi" Version="6.5.0" />
+    <PackageReference Include="IronXL.Excel" Version="2023.11.12" />
   </ItemGroup>
 
 </Project>
